<resources>

    <!--app_name do zmiany? -->

    <string name="app_name">Kraków Autobusy</string>
    <string name="title_map">Mapa</string>
    <string name="title_favorite">Ulubione</string>
    <string name="showAllRoadsOrFavorite">Pokaż ulubione/wszystkie pojazdy</string>
    <string name="yourLocation">Twoja lokalizacja</string>

    <string name="show_all_vehicles">Pokaż wszystkie pojazdy</string>
    <string name="show_favorite_vehicles">Pokaż ulubione pojazdy</string>

    <string name="find_line">WYSZUKAJ LINIE</string>
    <string name="tost_text_show_one_ore_all_vehicles">Pokazano wszystkie autobusy</string>

    <string name="line_number">544</string>
    <string name="first_bus_stop_description">Dworzec główny wschód</string>
    <string name="last_bus_stop_description">Witkowice</string>
    <string name="red_circle_desc">red circular icon</string>
    <string name="green_circle_desc">green circular icon</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="line_info">Linia 544</string>
    <string name="currently_following">Aktualnie śledzisz</string>
    <string name="first_bus_stop">Przystanek początkowy</string>
    <string name="last_bus_stop">Przystanek końcowy</string>
    <string name="change_direction_button">Zmień kierunek</string>
    <string name="bus_stop_number">21.</string>
    <string name="bus_stop_name">Os. Willowe</string>
    <string name="arrival_time">13.21</string>

    <string name="no_internet_icon_desc">Brak połączenia z internetem</string>
    <string name="no_internet_text">Sprawdź połączenie z internetem</string>
    <string name="refresh">Odśwież</string>
    <string name="app_name_loading_page"><font color='#32CD32'>G</font><font color='#000000'>dz</font><font color='#32CD32'>i</font><font color='#000000'>e a</font><font color='#32CD32'>u</font><font color='#000000'>to</font><font color='#32CD32'>b</font><font color='#000000'>us</font><font color='#32CD32'>?</font>
    </string>
    <string name="find_favourite_line">Znajdź linię aby dodać ją do ulubionych</string>
    <string name="favourite_empty_hint">Aktualnie nie masz żadnej ulubionej linii, znajdź ją aby dodać ją do ulubionych</string>
    <string name="empty_favourite_icon">Empty favourite icon</string>
    <string name="favourite"><u>Ulubione</u></string>
    <string name="marker_toast">Marker Toast</string>
    <string name="showBusStops">Wyswietl przystanki</string>
    <string name="openstreetmap_license">© autorzy OpenStreetMap</string>

    <string name="infoNoFavouriteVehicles">Musisz dodać ulubione pojazdy, aby je wyświetlić</string>
    <string name="infoNoFavouriteVehicleStop">Musisz dodać ulubione przystanki, aby je wyświetlić</string>



    <string name="textLineNumber">Linia numer</string>
    <string name="appName">KRAKÓW AUTOBUSY</string>
    <string name="mainDescriptApp">Śledź pozycję autobusów na żywo</string>
    <string name="favouriteText">Ulubione</string>
    <string name="favouriteVehicleStopText">Ulubione Przystanki</string>
    <string name="findLineText">Znajdź linię</string>
    <string name="timeDeparturesRename">Czasy odjazdów</string>
    <string name="followingText">śledzisz</string>
    <string name="changeVehicleText">Zmień pojazd</string>
    <string name="lineMenuText">Linie</string>
    <string name="VehicleStop">Przystanki</string>
    <string name="expected_time">(*) Przewidywany czas odjazdu</string>
    <string name="no_data_on_departures">Aktualnie nie \n posiadamy danych \n o odjazdach</string>


</resources>