<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:id="@+id/lineNumberBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_rect_shape_currently_following"
            android:orientation="vertical"
            android:padding="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp">

        <TextView
                android:id="@+id/lineNumberDetailed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/line_number"

                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:padding="2dp"
                android:textSize="12sp" />

        <TextView
                android:text="@string/currently_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/currentlyFollowing"
                android:textSize="5sp"
                android:textColor="@color/black"
                android:textAlignment="center" />

    </LinearLayout>

    <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lineNumberBox"
            android:layout_marginStart="4dp"
            android:layout_marginTop="3dp">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/green_circle"
                android:id="@+id/currentlyFollowing_green_circle"
                android:maxWidth="8dp"
                android:maxHeight="8dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_marginTop="9dp"
                android:layout_marginStart="8dp"
                android:layout_column="0"
                android:layout_row="0" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/currentlyFollowing_first_bus_stop"
                android:text="@string/first_bus_stop"

                android:textSize="@dimen/directions_bar_font_size"

                android:layout_marginTop="8dp"
                android:layout_marginStart="4dp"
                android:textColor="@color/currentlyFollowing_first_bus_stop_color" />

        <TextView
                android:text="@string/first_bus_stop_description"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:id="@+id/currentlyFollowing_first_bus_stop_data"

                android:textSize="@dimen/directions_bar_font_size"

                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                android:layout_column="2"
                android:layout_row="0"
                android:layout_marginStart="8dp" />


        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/red_circle"
                android:id="@+id/currentlyFollowing_red_circle"
                android:maxWidth="8dp"
                android:maxHeight="8dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_marginTop="5dp"
                android:layout_marginStart="8dp"
                android:layout_column="0"
                android:layout_row="2" />

        <TextView
                android:text="@string/last_bus_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/currentlyFollowing_last_bus_stop"

                android:textSize="@dimen/directions_bar_font_size"

                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp"
                android:textColor="@color/currentlyFollowing_last_bus_stop_color"
                android:layout_column="1"
                android:layout_row="2" />

        <TextView
                android:text="@string/last_bus_stop_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/currentlyFollowing_last_bus_stop_data"
                android:layout_weight="0"

                android:textSize="@dimen/directions_bar_font_size"

                android:textColor="@color/black"
                android:layout_marginTop="4dp"
                android:layout_column="2"
                android:layout_row="2"
                android:layout_marginStart="8dp" />

        <View

                android:layout_gravity="fill_horizontal"
                android:layout_width="1dp"

                android:layout_height="0.5dp"
                android:background="#AAAAAA"
                android:id="@+id/view"
                app:layout_constraintStart_toEndOf="@+id/lineNumberBox"
                app:layout_constraintEnd_toEndOf="@+id/first_bus_stop_box"
                app:layout_constraintTop_toBottomOf="@+id/first_bus_stop_box"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@+id/first_bus_stop_box"
                android:layout_marginStart="8dp"
                android:layout_columnSpan="3"
                android:layout_column="0"
                android:layout_row="1" />
    </GridLayout>

    <Button
            android:text="@string/change_direction_button"
            android:textSize="9sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/change_direction_button"
            android:padding="0dp"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp"
            android:textAllCaps="false"

            android:backgroundTint="@color/greenmain"/>



</androidx.constraintlayout.widget.ConstraintLayout>