<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <TextView
            android:text="@string/bus_stop_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sequenceNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:textColor="@color/black"/>

    <TextView
            android:text="@string/bus_stop_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameStopBus"
           android:paddingLeft="10dp"
            app:layout_constraintStart_toEndOf="@+id/sequenceNumber"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="1dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"/>

    <TextView
            android:text="@string/arrival_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timeBusStop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/arrival_status_icon"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"/>

    <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"

            android:id="@+id/arrival_status_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#AAAAAA"
            android:id="@+id/view2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line_name"
            android:layout_marginTop="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>