<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:divider="@null"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <LinearLayout
        android:id="@+id/lineNumberBox"
        android:layout_width="40dp"
        android:gravity="center"

        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_rect_shape_bus"
        android:orientation="vertical"
        android:padding="1dp"



        >

        <TextView
            android:id="@+id/lineNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line_number"
            android:textSize="14sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:padding="6dp"


            />

    </LinearLayout>



    <TextView
        android:text="@string/bus_stop_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameLineDirection"
        android:paddingLeft="10dp"
        app:layout_constraintStart_toEndOf="@+id/lineNumberBox"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="6dp"
        android:textColor="@color/black"/>

    <TextView
        android:text="@string/arrival_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeDeparture"
        app:layout_constraintTop_toTopOf="@id/nameLineDirection"
        app:layout_constraintEnd_toStartOf="@+id/statusicon"
        android:textColor="@color/black"

        android:layout_marginEnd="16dp"/>

    <ImageView
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:src="@color/red"
        android:id="@+id/statusicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/nameLineDirection"
       android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#AAAAAA"
        android:id="@+id/view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        android:layout_marginTop="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>