<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/search_result_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/no_internet_text_background"
        android:paddingBottom="16dp"
        android:paddingTop="8dp">


    <LinearLayout
            android:id="@+id/lineNumberBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_rect_shape_bus"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="8dp">

        <TextView
                android:id="@+id/lineNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/line_number"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:padding="8dp" />

    </LinearLayout>

    <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lineNumberBox"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp">

        <ImageView
                android:layout_width="19dp"
                android:layout_height="19dp"
                app:srcCompat="@drawable/green_circle"
                android:id="@+id/currentlyFollowing_green_circle"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_column="0"
                android:layout_row="0" />


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/currentlyFollowing_first_bus_stop"
                android:text="@string/first_bus_stop"
                android:textSize="@dimen/search_result_field_font_size"
                android:layout_marginStart="4dp"
                android:textColor="@color/black"
                android:layout_row="0"
                android:layout_column="1" />

        <ImageView
                android:layout_width="19dp"
                android:layout_height="19dp"
                app:srcCompat="@drawable/red_circle"
                android:id="@+id/currentlyFollowing_red_circle"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="3dp"
                android:layout_column="0"
                android:layout_row="1" />

        <TextView
                android:text="@string/last_bus_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/currentlyFollowing_last_bus_stop"
                android:textSize="@dimen/search_result_field_font_size"
                android:layout_marginStart="4dp"
                android:textColor="@color/black"
                android:layout_column="1"
                android:layout_row="1" />

    </GridLayout>

    <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/red_heart_icon"
            android:id="@+id/heartIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            app:layout_constraintVertical_bias="0.6" />
</androidx.constraintlayout.widget.ConstraintLayout>